<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_category_feedback_title">Feedback</string>
    <string name="about_category_others_title">Others</string>
    <string name="about_changelog_title">Changelog</string>
    <string name="about_email_summary">Email feedback</string>
    <string name="about_email_title">support@quickcursor.app</string>
    <string name="about_open_source_button">Open source</string>
    <string name="about_reddit_summary">Subreddit for news and feedback</string>
    <string name="about_reddit_title">/r/quickcursor</string>
    <string name="about_share_title">Share app link</string>
    <string name="about_telegram_summary">Telegram group for live feedback</string>
    <string name="about_telegram_title">https://t.me/quickcursor</string>
    <string name="about_xda_button">XDA thread</string>
    <string name="about_xda_summary">XDA project for news and feedback</string>
    <string name="accessibility_not_enabled">Something went wrong, the service is still not enabled. Please redo the tutorial and try again.</string>
    <string name="accessibility_service_already_enabled">Accessibility service is already enabled.</string>
    <string name="actions_feedback_category_click_title">Click</string>
    <string name="actions_feedback_category_cursor_action_title">Cursor action</string>
    <string name="actions_feedback_category_general_title">General</string>
    <string name="actions_feedback_category_others_title">Others</string>
    <string name="actions_feedback_edge_action_summary">Edge action vibrations and visual feedback</string>
    <string name="actions_feedback_edge_action_title">Edge action feedback</string>
    <string name="actions_feedback_reset_summary">Reset all vibrations and visual feedback settings to default</string>
    <string name="actions_feedback_reset_title">Reset to default</string>
    <string name="actions_feedback_ripple_color_title">Ripple color</string>
    <string name="actions_feedback_tracker_actions_summary">Enable vibration on tracker actions menu</string>
    <string name="actions_feedback_tracker_actions_title">Vibration on tracker actions</string>
    <string name="actions_feedback_vibration_click_summary">Enable vibration on click action</string>
    <string name="actions_feedback_vibration_cursor_action_summary">Enable vibration on cursor action (long tap, copy text, etc)</string>
    <string name="actions_feedback_vibration_duration_summary">Duration of the vibration in milliseconds</string>
    <string name="actions_feedback_vibration_duration_title">Vibration duration</string>
    <string name="actions_feedback_vibration_new_cursor_summary">Enable vibration when tracker and cursor appear on screen</string>
    <string name="actions_feedback_vibration_new_cursor_title">Vibration on new cursor</string>
    <string name="actions_feedback_vibration_title">Vibration</string>
    <string name="actions_feedback_visual_click_summary">Enable visual feedback on click action</string>
    <string name="actions_feedback_visual_color_click_summary">The color of the click visual feedback</string>
    <string name="actions_feedback_visual_color_cursor_action_summary">The color of the cursor visual feedback</string>
    <string name="actions_feedback_visual_cursor_action_summary">Enable visual feedback on cursor action</string>
    <string name="actions_feedback_visual_duration_summary">Visual feedback animation duration in milliseconds</string>
    <string name="actions_feedback_visual_duration_title">Visual feedback duration</string>
    <string name="actions_feedback_visual_size_summary">The ripple size</string>
    <string name="actions_feedback_visual_size_title">Visual feedback size</string>
    <string name="actions_feedback_visual_title">Visual feedback</string>
    <string name="application_id">com.quickcursor</string>
    <string name="backup_settings_backup_summary">Save all your current settings to an external file</string>
    <string name="backup_settings_backup_title">Backup</string>
    <string name="backup_settings_category_permissions_title">Permissions</string>
    <string name="backup_settings_reset_summary">Reset all settings to default values</string>
    <string name="backup_settings_reset_title">Reset all settings</string>
    <string name="backup_settings_restore_summary">Restore your old settings from an external file</string>
    <string name="backup_settings_restore_title">Restore</string>
    <string name="blacklist_settings_category_general_title">Filter settings</string>
    <string name="blacklist_settings_category_reset_title">Reset</string>
    <string name="blacklist_settings_filter_apps_loading_title">Loading…</string>
    <string name="blacklist_settings_filter_mode_title">Filter mode</string>
    <string name="blacklist_settings_reset_summary">Reset all blacklist/whitelist settings to default</string>
    <string name="blacklist_settings_reset_title">Reset to default</string>
    <string name="color_picker_dialog_default_button">Default</string>
    <string name="debug_category_experimental_title">Experimental</string>
    <string name="debug_category_logs_title">Logs</string>
    <string name="debug_category_options_title">Options</string>
    <string name="debug_category_others_title">Others</string>
    <string name="debug_clear_logs_summary">Delete all logs</string>
    <string name="debug_clear_logs_title">Clear logs</string>
    <string name="debug_logs_summary">Keep it enabled only when you are looking for more info on a bug</string>
    <string name="debug_logs_title">Debug logs</string>
    <string name="debug_view_logs_summary">View debug logs</string>
    <string name="debug_view_logs_title">View logs</string>
    <string name="debug_visuals_summary">Add some extra visuals for more info in screenshots/screen records</string>
    <string name="debug_visuals_title">Debug visuals</string>
    <string name="default_app_filter_mode">@string/values_app_filter_mode_disabled</string>
    <string name="input_dispatcher_bug_details_1">Google introduced a bug in Android 15 that breaks the click simulation in some situations. When this happens, no app can simulate a tap on the screen anymore.</string>
    <string name="input_dispatcher_bug_details_2">I\'ve reported the bug to Google and they confirmed and fixed the bug in Android 16, but the bug still exists in some devices with Android 15 (Pixel, Xiaomi and others).</string>
    <string name="input_dispatcher_bug_details_3">This can\'t be fixed by app developers but there are a few workarounds by simulating multi taps on the screen. More details: https://issuetracker.google.com/issues/384188031</string>
    <string name="input_dispatcher_bug_details_4">The workaround is also available as an action called \'Android 15 click bug workaround\' that you can set anywhere you want (Edge actions, Tracker actions, etc)</string>
    <string name="input_dispatcher_bug_detected_summary">Tries to detect when the click stops working and tries to simulate multi taps until it works again.</string>
    <string name="input_dispatcher_bug_detected_title">Workaround when click stops working</string>
    <string name="input_dispatcher_bug_more_details_category">More details</string>
    <string name="input_dispatcher_bug_more_details_github">More details on Github Issues</string>
    <string name="input_dispatcher_bug_on_tracker_long_tap_summary">Simulates a multi tap on the screen when you long tap the tracker. If your click doesn\'t work, you have to long tap the tracker.</string>
    <string name="input_dispatcher_bug_on_tracker_long_tap_title">Workaround on tracker long tap</string>
    <string name="input_dispatcher_bug_on_tracker_release_summary">Simulates a multi tap on the screen every time the tracker is moved. This is more intrusive and might interfere with other apps (or notification bar).</string>
    <string name="input_dispatcher_bug_on_tracker_release_title">Workaround on tracker release</string>
    <string name="input_dispatcher_bug_summary">Workarounds for clicks not working after some time</string>
    <string name="input_dispatcher_bug_title">Android 15 issue ⚠️</string>
    <string name="input_dispatcher_bug_workarounds_category">Workarounds</string>
    <string name="input_dispatcher_github_issue">https://github.com/micku7zu/QuickCursor/issues/29</string>
    <string name="missing_permissions_summary">Missing Android permissions on some actions</string>
    <string name="missing_permissions_title">Permissions needed</string>
    <string name="preference_enabled_on_lockscreen_summary">Keep app enabled on lockscreen</string>
    <string name="preference_enabled_on_lockscreen_title">Lockscreen</string>
    <string name="preference_vibration_amplitude_description">The strength of the vibration. 0 for default.</string>
    <string name="preference_vibration_amplitude_title">Vibration amplitude</string>
    <string name="quick_cursor_pro">quick_cursor_pro</string>
    <string name="quick_cursor_pro_2">quick_cursor_pro_2</string>
    <string name="quick_cursor_pro_3">quick_cursor_pro_3</string>
    <string name="quick_cursor_pro_subscription">quick_cursor_subscription</string>
    <string name="thanks_pro_buy_lifetime_summary">Upgrade to lifetime license. One time payment</string>
    <string name="thanks_pro_buy_lifetime_title">Buy lifetime license</string>
    <string name="thanks_pro_cancel_subscription_summary">Open Play Store subscriptions to cancel your annual subscription payment</string>
    <string name="thanks_pro_cancel_subscription_title">Cancel subscription</string>
    <string name="thanks_pro_category_more_support_summary">If you appreciate my work on this app and want to thank me again:</string>
    <string name="thanks_pro_category_more_support_title">More support</string>
    <string name="thanks_pro_category_rate_title">Rate</string>
    <string name="thanks_pro_rate_summary">Leave a review on Play Store</string>
    <string name="thanks_pro_rate_title">Rate the app</string>
    <string name="thanks_pro_subscription_canceled_summary">Annual subscription canceled but it is still active until the period expires</string>
    <string name="thanks_pro_subscription_canceled_title">Subscription canceled</string>
    <string name="thanks_pro_subscription_category_title">Active subscription</string>
    <string name="thanks_pro_support_developer_1">PRO + 1 x Support Developer</string>
    <string name="thanks_pro_support_developer_2">PRO + 2 x Support Developer</string>
    <string name="thanks_pro_support_developer_3">PRO + 3 x Support Developer</string>
    <string name="thanks_pro_support_developer_subscription">PRO + annual support developer</string>
</resources>