<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto" app:iconSpaceReserved="false">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false"
        app:key="subscriptionCategory"
        app:persistent="false"
        app:title="@string/thanks_pro_subscription_category_title">
        <Preference
            app:icon="@drawable/icon_cancel_subscription"
            app:key="cancelSubscription"
            app:persistent="false"
            app:summary="@string/thanks_pro_cancel_subscription_summary"
            app:title="@string/thanks_pro_cancel_subscription_title"/>
        <Preference
            app:icon="@drawable/icon_subscription_canceled"
            app:key="subscriptionCanceled"
            app:persistent="false"
            app:summary="@string/thanks_pro_subscription_canceled_summary"
            app:title="@string/thanks_pro_subscription_canceled_title"/>
        <Preference
            app:icon="@drawable/icon_premium"
            app:key="buyLifetime"
            app:persistent="false"
            app:summary="@string/thanks_pro_buy_lifetime_summary"
            app:title="@string/thanks_pro_buy_lifetime_title"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/thanks_pro_category_rate_title">
        <Preference
            app:icon="@drawable/icon_play_store"
            app:key="rateApp"
            app:persistent="false"
            app:summary="@string/thanks_pro_rate_summary"
            app:title="@string/thanks_pro_rate_title"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about_category_feedback_title">
        <Preference
            app:icon="@drawable/icon_contact"
            app:key="email"
            app:persistent="false"
            app:summary="@string/about_email_summary"
            app:title="@string/about_email_title"/>
        <Preference
            app:icon="@drawable/icon_telegram"
            app:key="telegram"
            app:persistent="false"
            app:summary="@string/about_telegram_summary"
            app:title="@string/about_telegram_title"/>
        <Preference
            app:icon="@drawable/icon_xda"
            app:key="xda"
            app:persistent="false"
            app:summary="@string/about_xda_summary"
            app:title="@string/about_xda_button"/>
        <Preference
            app:icon="@drawable/icon_reddit"
            app:key="reddit"
            app:persistent="false"
            app:summary="@string/about_reddit_summary"
            app:title="@string/about_reddit_title"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about_category_others_title">
        <Preference
            app:icon="@drawable/icon_share"
            app:key="share"
            app:persistent="false"
            app:title="@string/about_share_title"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/thanks_pro_category_more_support_title">
        <Preference
            app:iconSpaceReserved="false"
            app:key="ignore"
            app:persistent="false"
            app:selectable="false"
            app:summary="@string/thanks_pro_category_more_support_summary"
            app:title=""/>
        <Preference
            app:icon="@drawable/icon_buy_lifetime"
            app:key="@string/quick_cursor_pro"
            app:persistent="false"
            app:title="@string/thanks_pro_support_developer_1"/>
        <Preference
            app:icon="@drawable/icon_buy_lifetime"
            app:key="@string/quick_cursor_pro_2"
            app:persistent="false"
            app:title="@string/thanks_pro_support_developer_2"/>
        <Preference
            app:icon="@drawable/icon_buy_lifetime"
            app:key="@string/quick_cursor_pro_3"
            app:persistent="false"
            app:title="@string/thanks_pro_support_developer_3"/>
        <Preference
            app:icon="@drawable/icon_subscription"
            app:key="@string/quick_cursor_pro_subscription"
            app:persistent="false"
            app:title="@string/thanks_pro_support_developer_subscription"/>
    </PreferenceCategory>
</PreferenceScreen>
