<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" app:iconSpaceReserved="false">
    <PreferenceCategory
        android:title="@string/debug_category_options_title"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:title="@string/debug_visuals_title"
            android:key="debugVisual"
            android:summary="@string/debug_visuals_summary"
            android:defaultValue="@bool/default_debug_visual"
            app:iconSpaceReserved="false"/>
        <SwitchPreference
            android:title="@string/debug_logs_title"
            android:key="debugLogs"
            android:summary="@string/debug_logs_summary"
            android:defaultValue="@bool/default_debug_logs"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/debug_category_logs_title"
        app:iconSpaceReserved="false">
        <Preference
            app:iconSpaceReserved="false"
            app:key="viewLogs"
            app:persistent="false"
            app:summary="@string/debug_view_logs_summary"
            app:title="@string/debug_view_logs_title"/>
        <Preference
            app:iconSpaceReserved="false"
            app:key="clearLogs"
            app:persistent="false"
            app:summary="@string/debug_clear_logs_summary"
            app:title="@string/debug_clear_logs_title"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/debug_category_experimental_title"
        app:iconSpaceReserved="false">
        <Preference
            android:title="@string/input_dispatcher_bug_title"
            android:key="inputDispatcherBug"
            android:summary="@string/input_dispatcher_bug_summary"
            app:iconSpaceReserved="false"
            app:persistent="false">
            <intent
                android:targetPackage="@string/application_id"
                android:targetClass="com.quickcursor.android.activities.settings.InputDispatcherBug"/>
        </Preference>
        <SwitchPreference
            android:title="@string/preference_enabled_on_lockscreen_title"
            android:key="enabledOnLockscreen"
            android:summary="@string/preference_enabled_on_lockscreen_summary"
            android:defaultValue="@bool/default_enabled_on_lockscreen"
            app:iconSpaceReserved="false"/>
        <com.quickcursor.android.preferences.SeekBarDialogPreference
            android:title="@string/preference_vibration_amplitude_title"
            app:defaultValue="@integer/default_vibration_amplitude"
            app:description="@string/preference_vibration_amplitude_description"
            app:iconSpaceReserved="false"
            app:key="vibrationAmplitude"
            app:max="255"
            app:min="0"
            app:step="5"
            app:units=""
            app:updatesContinuously="true"/>
        <com.quickcursor.android.preferences.SeekBarDialogPreference
            android:title="@string/actions_feedback_vibration_duration_title"
            app:defaultValue="@integer/default_vibration_duration"
            app:description="@string/actions_feedback_vibration_duration_summary"
            app:iconSpaceReserved="false"
            app:key="vibrationDuration"
            app:max="@integer/max_vibration_duration"
            app:min="1"
            app:step="5"
            app:units="ms"
            app:updatesContinuously="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/debug_category_others_title"
        app:iconSpaceReserved="false">
        <Preference
            android:title="@string/backup_settings_reset_title"
            android:key="reset"
            android:summary="@string/backup_settings_reset_summary"
            app:icon="@drawable/icon_reset"
            app:persistent="false"/>
    </PreferenceCategory>
</PreferenceScreen>
