<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" app:iconSpaceReserved="false">
    <Preference
        android:persistent="false"
        android:title=""
        android:selectable="false"
        android:key="ignore"
        android:summary="@string/input_dispatcher_bug_details_1"
        app:iconSpaceReserved="false"/>
    <Preference
        android:persistent="false"
        android:title=""
        android:selectable="false"
        android:key="ignore"
        android:summary="@string/input_dispatcher_bug_details_2"
        app:iconSpaceReserved="false"/>
    <Preference
        android:persistent="false"
        android:title=""
        android:key="ignore"
        android:summary="@string/input_dispatcher_bug_details_3"
        app:iconSpaceReserved="false"/>
    <PreferenceCategory
        android:title="@string/input_dispatcher_bug_workarounds_category"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:title="@string/input_dispatcher_bug_detected_title"
            android:key="inputDispatcherBugOnDetected"
            android:summary="@string/input_dispatcher_bug_detected_summary"
            app:iconSpaceReserved="false"/>
        <SwitchPreference
            android:title="@string/input_dispatcher_bug_on_tracker_long_tap_title"
            android:key="inputDispatcherBugOnTrackerLongTap"
            android:summary="@string/input_dispatcher_bug_on_tracker_long_tap_summary"
            android:defaultValue="@bool/default_input_dispatcher_bug_on_tracker_long_tap"
            app:iconSpaceReserved="false"/>
        <SwitchPreference
            android:title="@string/input_dispatcher_bug_on_tracker_release_title"
            android:key="inputDispatcherBugOnTrackerRelease"
            android:summary="@string/input_dispatcher_bug_on_tracker_release_summary"
            android:defaultValue="@bool/default_input_dispatcher_bug_on_tracker_release"
            app:iconSpaceReserved="false"/>
        <Preference
            android:persistent="false"
            android:title=""
            android:key="ignore"
            android:summary="@string/input_dispatcher_bug_details_4"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/input_dispatcher_bug_more_details_category"
        app:iconSpaceReserved="false">
        <Preference
            app:icon="@drawable/icon_open"
            app:key="github_issue"
            app:persistent="false"
            app:summary="@string/input_dispatcher_github_issue"
            app:title="@string/input_dispatcher_bug_more_details_github"/>
        <Preference
            app:icon="@drawable/icon_contact"
            app:key="email"
            app:persistent="false"
            app:summary="@string/about_email_summary"
            app:title="@string/about_email_title"/>
    </PreferenceCategory>
</PreferenceScreen>
