<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" app:iconSpaceReserved="false">
    <PreferenceCategory
        android:title="@string/actions_feedback_category_general_title"
        app:iconSpaceReserved="false">
        <com.quickcursor.android.preferences.SeekBarDialogPreference
            android:title="@string/actions_feedback_vibration_duration_title"
            app:defaultValue="@integer/default_vibration_duration"
            app:description="@string/actions_feedback_vibration_duration_summary"
            app:iconSpaceReserved="false"
            app:key="vibrationDuration"
            app:max="@integer/max_vibration_duration"
            app:min="1"
            app:step="5"
            app:units="ms"
            app:updatesContinuously="true"/>
        <com.quickcursor.android.preferences.SeekBarDialogPreference
            android:title="@string/actions_feedback_visual_duration_title"
            app:defaultValue="@integer/default_ripple_duration"
            app:description="@string/actions_feedback_visual_duration_summary"
            app:iconSpaceReserved="false"
            app:key="rippleDuration"
            app:max="@integer/max_ripple_duration"
            app:min="100"
            app:step="25"
            app:units="ms"
            app:updatesContinuously="true"/>
        <com.quickcursor.android.preferences.SeekBarDialogPreference
            android:title="@string/actions_feedback_visual_size_title"
            app:defaultValueDimen="@dimen/default_ripple_size"
            app:description="@string/actions_feedback_visual_size_summary"
            app:floatValue="true"
            app:iconSpaceReserved="false"
            app:key="rippleSize"
            app:min="10"
            app:step="10"
            app:units="px"
            app:updatesContinuously="true"/>
        <Preference
            android:title="@string/actions_feedback_reset_title"
            android:key="vibrations_and_visual_reset_default"
            android:summary="@string/actions_feedback_reset_summary"
            app:iconSpaceReserved="false"
            app:persistent="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/actions_feedback_category_click_title"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:title="@string/actions_feedback_vibration_title"
            android:key="vibrationOnClick"
            android:summary="@string/actions_feedback_vibration_click_summary"
            android:defaultValue="@bool/default_vibration_on_click"
            app:iconSpaceReserved="false"/>
        <SwitchPreference
            android:title="@string/actions_feedback_visual_title"
            android:key="rippleOnClick"
            android:summary="@string/actions_feedback_visual_click_summary"
            android:defaultValue="@bool/default_ripple_on_click"
            app:iconSpaceReserved="false"/>
        <com.quickcursor.android.preferences.ColorPreferenceWithDefault
            android:title="@string/actions_feedback_ripple_color_title"
            android:key="rippleClickColor"
            android:summary="@string/actions_feedback_visual_color_click_summary"
            android:defaultValue="@color/default_ripple_click_color"
            app:colorpicker_selectNoneButtonText="@string/color_picker_dialog_default_button"
            app:dependency="rippleOnClick"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/actions_feedback_category_cursor_action_title"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:title="@string/actions_feedback_vibration_title"
            android:key="vibrationOnCursorAction"
            android:summary="@string/actions_feedback_vibration_cursor_action_summary"
            android:defaultValue="@bool/default_vibration_on_cursor_action"
            app:iconSpaceReserved="false"/>
        <SwitchPreference
            android:title="@string/actions_feedback_visual_title"
            android:key="rippleOnCursorAction"
            android:summary="@string/actions_feedback_visual_cursor_action_summary"
            android:defaultValue="@bool/default_ripple_on_cursor_action"
            app:iconSpaceReserved="false"/>
        <com.quickcursor.android.preferences.ColorPreferenceWithDefault
            android:title="@string/actions_feedback_ripple_color_title"
            android:key="rippleCursorActionColor"
            android:summary="@string/actions_feedback_visual_color_cursor_action_summary"
            android:defaultValue="@color/default_ripple_cursor_action_color"
            app:colorpicker_selectNoneButtonText="@string/color_picker_dialog_default_button"
            app:dependency="rippleOnCursorAction"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/actions_feedback_category_others_title"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:title="@string/actions_feedback_vibration_new_cursor_title"
            android:key="vibrationOnTriggerStart"
            android:summary="@string/actions_feedback_vibration_new_cursor_summary"
            android:defaultValue="@bool/default_vibration_on_trigger_start"
            app:iconSpaceReserved="false"/>
        <SwitchPreference
            android:title="@string/actions_feedback_tracker_actions_title"
            android:key="trackerActionsVibrationFeedback"
            android:summary="@string/actions_feedback_tracker_actions_summary"
            android:defaultValue="@bool/default_tracker_actions_vibration_feedback"
            app:iconSpaceReserved="false"/>
        <Preference
            android:title="@string/actions_feedback_edge_action_title"
            android:key="edge_action_feedback"
            android:summary="@string/actions_feedback_edge_action_summary"
            app:iconSpaceReserved="false"
            app:persistent="false"/>
    </PreferenceCategory>
</PreferenceScreen>
