<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" app:iconSpaceReserved="false">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about_category_feedback_title">
        <Preference
            app:icon="@drawable/icon_contact"
            app:key="email"
            app:persistent="false"
            app:summary="@string/about_email_summary"
            app:title="@string/about_email_title"/>
        <Preference
            app:icon="@drawable/icon_telegram"
            app:key="telegram"
            app:persistent="false"
            app:summary="@string/about_telegram_summary"
            app:title="@string/about_telegram_title"/>
        <Preference
            app:icon="@drawable/icon_xda"
            app:key="xda"
            app:persistent="false"
            app:summary="@string/about_xda_summary"
            app:title="@string/about_xda_button"/>
        <Preference
            app:icon="@drawable/icon_reddit"
            app:key="reddit"
            app:persistent="false"
            app:summary="@string/about_reddit_summary"
            app:title="@string/about_reddit_title"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="translate_category"
        app:iconSpaceReserved="false"
        app:title="Translations">
        <Preference
            android:persistent="false"
            android:selectable="false"
            android:key="ignore"
            android:summary="The app is translated with the help of the community. If you want to help with the translation of the app, please contact me or join the project below:"
            app:iconSpaceReserved="false"/>
        <Preference
            app:icon="@drawable/icon_translate"
            app:key="translate"
            app:persistent="false"
            app:title="quickcursor.app/translate"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about_category_others_title">
        <Preference
            app:icon="@drawable/icon_share"
            app:key="share"
            app:persistent="false"
            app:title="@string/about_share_title"/>
        <Preference
            app:icon="@drawable/icon_changelog"
            app:key="changelog"
            app:persistent="false"
            app:title="@string/about_changelog_title"/>
        <Preference
            app:icon="@drawable/icon_open_source"
            app:persistent="false"
            app:title="@string/about_open_source_button">
            <intent
                android:targetPackage="@string/application_id"
                android:targetClass="com.quickcursor.android.activities.OpenSourceActivity"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
